RESOLVED FIXED 247837
REGRESSION (253809@main): Comment field on Engadget.com exhibits stutters while scrolling
https://bugs.webkit.org/show_bug.cgi?id=247837
Summary REGRESSION (253809@main): Comment field on Engadget.com exhibits stutters whi...
Simon Fraser (smfr)
Reported 2022-11-11 19:43:55 PST
On iOS: Comments on https://www.engadget.com/call-of-duty-modern-warfare-ii-171127884.html stutter while scrolling KaTeX math typeset on Khanacademy isn’t anchored when scrolling (https://www.khanacademy.org/math/cc-fifth-grade-math/imp-place-value-and-decimals/imp-decimal-place-value-intro/a/decimal-place-value-review?modal=1) https://www.waveplayer.info/createmediaelementsource-test/ and some other pages assert in RenderLayerCompositor::updateScrollingNodeForViewportConstrainedRole().
Attachments
Simon Fraser (smfr)
Comment 1 2022-11-11 19:45:31 PST
Simon Fraser (smfr)
Comment 2 2022-11-11 19:49:57 PST
Simon Fraser (smfr)
Comment 3 2022-11-11 19:57:09 PST
EWS
Comment 4 2022-11-13 08:54:06 PST
Committed 256619@main (242980046171): <https://commits.webkit.org/256619@main> Reviewed commits have been landed. Closing PR #6421 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.